fixed pagination overflow

--- a/client/website/src/css/Newsletters.css
+++ b/client/website/src/css/Newsletters.css
@@ -64,11 +64,21 @@
 .newsletter__pagination ul {
   display: inline-block;
 }
-
-.newsletter__pagination li {
-  display: inline-block;
-  padding-left: 10px;
-  padding-right: 10px;
+@media only screen and (min-width: 301px) {
+  .newsletter__pagination li {
+    display: inline-block;
+    padding-left: 10px;
+    padding-right: 10px;
+    font-size: 16px;
+  }
+}
+@media only screen and (max-width: 300px) {
+  .newsletter__pagination li {
+    display: inline-block;
+    padding-left: 10px;
+    padding-right: 10px;
+    font-size: 14px;
+  }
 }
 
 .newsletter__pagination--active {
